--- a/application/layouts/scripts/layout_admin_cliente.phtml
+++ b/application/layouts/scripts/layout_admin_cliente.phtml
@@ -33,14 +33,14 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="<?= $this->baseUrl("") ?>">
+                            <a class="nav-link" href="<?= $this->baseUrl("admin-cliente") ?>">
                                 <i class="fas fa-home"></i>
                                 Início
                                 <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("admin-cliente") ?>">
-                                Compra
+                            <a class="nav-link" href="<?= $this->baseUrl("admin-cliente/buscar") ?>">
+                                Compra Online
                             </a>
                         </li>
                     </ul>
