Adicionando alguns detalhes...

--- a/application/views/scripts/promocao/index.phtml
+++ b/application/views/scripts/promocao/index.phtml
@@ -29,7 +29,7 @@
       </form>
     </div>      
     <div class="col-lg-4">
-    <div style="background-color:DodgerBlue;">
+    <div style="background-color:DodgerBlue; height: 500px; overflow:auto;">
         <table class="table">
           <thead>
             <tr>
