compra online ta ok agora

--- a/application/layouts/scripts/layout_admin_geral.phtml
+++ b/application/layouts/scripts/layout_admin_geral.phtml
@@ -71,6 +71,11 @@
                                 Idosos
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("promocao") ?>">
+                                Promoção
+                            </a>
+                        </li>
                     </ul>
 
                     <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
