--- a/application/layouts/scripts/layout_secretario.phtml
+++ b/application/layouts/scripts/layout_secretario.phtml
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/png" href=<?= $this->baseUrl("dist/img/bus.png") ?> />
         <!--Caminho da public "$this->baseUrl()-->
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/bootstrap-cerulean.css") ?> />
-        
+
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/secretario.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/trajeto.css") ?> />
@@ -51,6 +51,11 @@
                             <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("parada-onibus") ?>">
                                 <i class="fas fa-user"></i>
                                 Paradas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" title="(Alt+f) Visualizar Tarifas do Frete" href="<?= $this->baseUrl("tarifa-frete") ?>">
+                                <i class="fas fa-user"></i>
+                                Tarifa Frete</a>
                         </li>
                     </ul>
 
