--- a/application/views/scripts/admin-cliente/visualizar.phtml
+++ b/application/views/scripts/admin-cliente/visualizar.phtml
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-12" style="padding: 0px;">
             <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.5);">
-                <li class="breadcrumb-item"><a href="<?= $this->baseUrl("compra") ?>">Início</a></li>
+                <li class="breadcrumb-item"><a href="<?= $this->baseUrl("admin-cliente") ?>">Início</a></li>
                 <li class="breadcrumb-item active" style="color: white;" aria-current="page">Visualizar</li>
             </ol>
         </div>
@@ -15,6 +15,8 @@
                 <h4 style="color: white; text-align: center"><strong style="color: white;">Dia: </strong><? echo $compra['DESCRICAO'] ?></h4>
                 <h4 style="color: white; text-align: center"><strong style="color: white;">Linha: </strong><? echo $compra['descricao'] ?></h4>
                 <h4 style="color: white; text-align: center"><strong style="color: white;">Horário: </strong><? echo $compra['horario_inicio'] ?></h4>
+                <h4 style="color: white; text-align: center"><strong style="color: white;">Opção: </strong><? echo $compra['DESC'] ?></h4>
+                <h4 style="color: white; text-align: center"><strong style="color: white;">Valor: </strong><? echo $compra['VAL'] ?></h4>
             <? endforeach; ?>
 
             <table class="table" style="text-align: center; margin-top: 2%; background-color:rgba(0,0,0,0.5); padding: 0px; color: white;">
